# yfinance

./: README.md  yfinance.cabal
src/: Main.hs
src/Network/Yahoo/: Finance.hs  HistoricalQuote.hs  Interpolate.hs  Persist.hs  StockQuote.hs
test/fixtures/: nasdaq.json
