name:                yfinance
version:             0.1.0.0
license-file:        LICENSE
author:              Owain Lewis
maintainer:          owain@owainlewis.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.8.4, GHC == 7.10.2

library
  exposed-modules:
    Network.Yahoo.Finance
  build-depends:
    base >=4.7 && <5,
    wreq,
    aeson,
    lens,
    bytestring,
    text,
    containers,
    regex-compat
  hs-source-dirs:      src
  default-language:    Haskell2010
